--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <section>
-        <div class="menu">
+        <div class="encabezado">
             <header>
                 <img class="logo" src="Logo/logo_claro_02.png" alt="Logotipo de Melina Torres - Wedding planner">
                 <nav class="menu">
