--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 class="titulo">Tú día más feliz</h1>
         <h1 class="titulo">Con la boda de tus sueños.</h1>
         <p class="descripcion">Organizar tu boda o pedir la mano de tu pareja debe ser un día de ilusión y emoción.</p>
-        <p class="descripcion">Con nuestra experienia te ayudamos a volverlo realidad y eliminar toda la presión de ese día.</p>
+        <p class="descripcion">Con nuestra experiencia te ayudamos a volverlo realidad y eliminar toda la presión de ese día.</p>
         <p class="descripcion">Nuestra misión es verte feliz, radiante y disfrutando de ese memorable día.</p>
     </section>
 
