--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <li class="list-group-item bi bi-check2-all"> Cena romántica.</li>
                             <li class="list-group-item bi bi-check2-all"> Camino luminoso.</li>
                             <li class="list-group-item bi bi-check2-all"> Camino de pétalos de rosas.</li>
-                            <li class="list-group-item bi bi-check2-all"> Música romántica (Sax o violin en vivo).</li>
+                            <li class="list-group-item bi bi-check2-all"> Música romántica (Sax o violín en vivo).</li>
                             <li class="list-group-item bi bi-check2-all"> Botella de vino para 2.</li>
                             <li class="list-group-item bi bi-check2-all"> Letras luminosas.</li>
                             <li class="list-group-item bi bi-check2-all"> Pirotecnica fría.</li>
@@ -163,8 +163,8 @@
 
     <section class="contacto" id="contacto">
         <h2>Contacto</h2>
-        <p class="descripcion">Si tienes Dudas, preguntas o comentarios,</p>
-        <p class="descripcion">esperamos tu mensaje! Estamos para servirte.</p>
+        <p class="descripcion">Si tienes dudas, preguntas o comentarios, esperamos tu mensaje! Estamos para servirte.</p>
+        <!-- <p class="descripcion"></p> -->
         <div class="metodo_contacto">
             <div class="contacto_container llamada">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-telephone-outbound-fill" viewBox="0 0 16 16">
